--- a/loja_app/templates/loja_app/home.html
+++ b/loja_app/templates/loja_app/home.html
@@ -1,6 +1,7 @@
 {% extends 'loja_app/base.html' %}
+
 {% block title %}Página Inicial{% endblock %}
+
 {% block content %}
-  <h1>Bem-vindo</h1>
-  <p>Transforme sua saúde através da nutrição alcalina, funcional e esportiva, aliada ao poder da fitoterapia.</p>
+  <h1 style="color: red;">TESTE 123 - VISÍVEL?</h1>
 {% endblock %}
