--- a/loja_app/templates/loja_app/home.html
+++ b/loja_app/templates/loja_app/home.html
@@ -1,7 +1,6 @@
 {% extends 'loja_app/base.html' %}
 
-{% block title %}Página Inicial{% endblock %}
-
 {% block content %}
-  <h1 style="color: red;">TESTE 123 - VISÍVEL?</h1>
+  <h1>Bem-vindo!</h1>
+  <p>Seu portal de saúde, bem-estar e nutrição.</p>
 {% endblock %}
