--- a/loja_app/templates/loja_app/base.html
+++ b/loja_app/templates/loja_app/base.html
@@ -39,6 +39,7 @@
       </li>
       <!-- As outras abas seguem aqui -->
       <li>
+        <li><a href="{% url 'suplementos' %}">Suplementos</a></li>
         <a class="toggle">Performance Esportiva</a>
         <ul class="submenu">
           <li><a href="{% url 'nutricao_para_atletas' %}">Nutrição para Atletas</a></li>
