--- a/loja_app/static/css/styles.css
+++ b/loja_app/static/css/styles.css
@@ -234,7 +234,7 @@ body {
   }
 
   .sidebar {
-    position: absolute;
+    position: fixed;
     width: 220px; /* Tamanho fixo para todos os dispositivos */
     left: -220px;
     transition: left 0.3s ease;
@@ -266,6 +266,10 @@ body {
 
 /* Para telas entre 768px e 1024px (tablets) */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .content {
+    margin-left: 0; /* Remove o espaço à esquerda */
+  }
+
   body {
     background-color: rgb(255, 255, 255); /* Exemplo de mudança para tablets */
   }
